// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIAccountSelector renders an account selector 1`] = `
<View
  style={
    [
      {
        "flexGrow": 1,
        "minHeight": 667,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "flexDirection": "column",
          "flexGrow": 1,
        },
      ]
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
      testID="snap-ui-renderer__scrollview"
    >
      <View>
        <View
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            color="Default"
            flexDirection="column"
            gap={8}
            justifyContent="flex-start"
            style={
              [
                {
                  "color": "Default",
                  "flexDirection": "column",
                  "gap": 8,
                  "justifyContent": "flex-start",
                },
                {
                  "gap": 16,
                  "margin": 16,
                },
              ]
            }
          >
            <View
              flexDirection="column"
              style={
                [
                  {
                    "flexDirection": "column",
                  },
                  undefined,
                ]
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#b7bbc866",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": "auto",
                    "justifyContent": "center",
                    "maxHeight": 58,
                    "minHeight": 48,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingBottom": 8,
                    "paddingHorizontal": 16,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 8,
                  }
                }
                testID="snap-ui-renderer__selector"
              >
                <View
                  alignItems="center"
                  flexDirection="row"
                  gap={16}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 16,
                      },
                      {
                        "flex": 1,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#ffffff",
                        "borderRadius": 8,
                        "height": 32,
                        "overflow": "hidden",
                        "width": 32,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "height": 32,
                          "width": 32,
                        }
                      }
                    />
                  </View>
                  <View
                    flexDirection="column"
                    style={
                      [
                        {
                          "flexDirection": "column",
                        },
                        {
                          "flex": 1,
                          "overflow": "hidden",
                        },
                      ]
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Medium",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      Account 1
                    </Text>
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 14,
                          "letterSpacing": 0,
                          "lineHeight": 22,
                        }
                      }
                    >
                      0xC4955...4D272
                    </Text>
                  </View>
                  <View
                    alignItems="flex-end"
                    flexDirection="column"
                    style={
                      [
                        {
                          "alignItems": "flex-end",
                          "flexDirection": "column",
                        },
                        {
                          "marginLeft": "auto",
                        },
                      ]
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Medium",
                          "fontSize": 14,
                          "letterSpacing": 0,
                          "lineHeight": 22,
                        }
                      }
                    >
                      $3200.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
                <SvgMock
                  color="#121314"
                  fill="currentColor"
                  height={16}
                  name="ArrowDown"
                  style={
                    {
                      "height": 16,
                      "marginLeft": 8,
                      "width": 16,
                    }
                  }
                  width={16}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIAccountSelector renders inside a field 1`] = `
<View
  style={
    [
      {
        "flexGrow": 1,
        "minHeight": 667,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "flexDirection": "column",
          "flexGrow": 1,
        },
      ]
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
      testID="snap-ui-renderer__scrollview"
    >
      <View>
        <View
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            color="Default"
            flexDirection="column"
            gap={8}
            justifyContent="flex-start"
            style={
              [
                {
                  "color": "Default",
                  "flexDirection": "column",
                  "gap": 8,
                  "justifyContent": "flex-start",
                },
                {
                  "gap": 16,
                  "margin": 16,
                },
              ]
            }
          >
            <View
              flexDirection="column"
              style={
                [
                  {
                    "flexDirection": "column",
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
                testID="label"
              >
                Account Selector
              </Text>
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#b7bbc866",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": "auto",
                    "justifyContent": "center",
                    "maxHeight": 58,
                    "minHeight": 48,
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingBottom": 8,
                    "paddingHorizontal": 16,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 8,
                  }
                }
                testID="snap-ui-renderer__selector"
              >
                <View
                  alignItems="center"
                  flexDirection="row"
                  gap={16}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 16,
                      },
                      {
                        "flex": 1,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#ffffff",
                        "borderRadius": 8,
                        "height": 32,
                        "overflow": "hidden",
                        "width": 32,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "height": 32,
                          "width": 32,
                        }
                      }
                    />
                  </View>
                  <View
                    flexDirection="column"
                    style={
                      [
                        {
                          "flexDirection": "column",
                        },
                        {
                          "flex": 1,
                          "overflow": "hidden",
                        },
                      ]
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Medium",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      Account 1
                    </Text>
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 14,
                          "letterSpacing": 0,
                          "lineHeight": 22,
                        }
                      }
                    >
                      0xC4955...4D272
                    </Text>
                  </View>
                  <View
                    alignItems="flex-end"
                    flexDirection="column"
                    style={
                      [
                        {
                          "alignItems": "flex-end",
                          "flexDirection": "column",
                        },
                        {
                          "marginLeft": "auto",
                        },
                      ]
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Medium",
                          "fontSize": 14,
                          "letterSpacing": 0,
                          "lineHeight": 22,
                        }
                      }
                    >
                      $3200.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
                <SvgMock
                  color="#121314"
                  fill="currentColor"
                  height={16}
                  name="ArrowDown"
                  style={
                    {
                      "height": 16,
                      "marginLeft": 8,
                      "width": 16,
                    }
                  }
                  width={16}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;
